--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  latlong2: ^0.9.0
+  latlong2: ">=0.8.0 <1.1.0"
   flutter_map: ^6.1.0
 
 dev_dependencies:
