--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   latlong2: ">=0.8.0 <1.1.0"
-  flutter_map: ^6.1.0
+  flutter_map: ">=4.0.0 <6.1.0"
 
 dev_dependencies:
   flutter_test:
